# WAE-MO-CMA-ES-vs-EGO

./: .gitignore  README.md  pyproject.toml
configs/: comparison_smoke.yaml  full_benchmark.yaml  full_benchmark_12h.yaml  full_benchmark_large.yaml  full_benchmark_template.yaml  medium_comparison.yaml  pilot_comparison.yaml  seeds.csv  seeds_full.csv  smoke.yaml  study_plan.yaml
docs/: PR_SCOPE.md  URUCHOMIENIE.md
docs/report/: main.tex
scripts/: analyze_results.py  check_coco_install.py  generate_cocopp_report.py  run_budget_sweep.py  run_experiment.py  run_full_benchmark.py  run_statistics.py  run_study.py  summarize_results.py
src/wae_project/: __init__.py
src/wae_project/algorithms/: __init__.py  mo_cma_es.py  parego.py
src/wae_project/analysis/: __init__.py  data_profiles.py  metrics.py  statistics.py
src/wae_project/benchmarks/: __init__.py  coco_biobj.py  coco_logging.py
src/wae_project/experiments/: config.py  results.py  runner.py
tests/: test_config.py  test_metrics.py  test_statistics.py
