[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wae-mo-cma-es-vs-ego"
version = "0.1.0"
description = "Comparison of MO-CMA-ES and EGO on BBOB-BIOBJ benchmark problems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botorch>=0.11",
    "cma>=4.4",
    "coco-experiment>=2.8",
    "cocopp>=2.8",
    "comocma>=0.6",
    "gpytorch>=1.12",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "PyYAML>=6.0",
    "torch>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
